--- a/ALATv2HTML/css/loan.css
+++ b/ALATv2HTML/css/loan.css
@@ -178,6 +178,34 @@
     justify-content: center;
     padding-bottom: 35px;
   }
+
   .term-acpt-link{
     margin-right: 30px;
   }
+
+  .center-space{
+    align-items: center;
+    min-height: 150px;
+  }
+
+.text-grey-center{
+  color: #717171;
+  text-align: center;
+}
+
+.progress-bar{
+  margin-right: 25px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  min-width: 120px;
+  max-height: 10px;
+  background-color: #D8D8D8;
+}
+
+.inner-bar{
+  max-width: 75%;
+    background-color: #9F083E;
+    min-height: 10px;
+    border-radius: 5px;
+}
