--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -29,12 +29,14 @@
       margin-bottom: 20px;
       background-position: center;
       background-size: cover;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
   }
 
   .eventTrays .boldHeader {
      color: #444444;
-     font-size: 16px;
-     font-family:"proxima_novasemibold";
+     font-size: 13px;
+     font-family:"proxima_novasemibold" !important;
      margin-bottom: 2px;
   }
 
@@ -74,7 +76,7 @@
        margin-right: 10px;
        color: #FFFFFF;
        font-size: 16px;
-       font-family:"proxima_novasemibold";
+       font-family:"proxima_novasemibold" !important;
        background-color: #AB2656;
        border: none;
   }
@@ -83,7 +85,7 @@
       color: white;
       font-size: 16px;
       border: 1px solid #AB2656;
-      font-family:"proxima_novasemibold";
+      font-family:"proxima_novasemibold" !important;
       margin-bottom: 30px;
   }
 
@@ -97,7 +99,7 @@
        color: #AB2656;
        font-size: 16px;
        border: 1px solid #AB2656;
-       font-family:"proxima_novasemibold";
+       font-family:"proxima_novasemibold" !important;
        margin-bottom: 30px;
   }
 
@@ -121,6 +123,8 @@
       text-align: right;
       padding-right: 20px;
       font-weight: bold !important;
+      font-family:'proxima_novaregular'
+      
   }
 
   .puchaseSumTickets p {
@@ -138,7 +142,7 @@
   .eventPreferences .buttons1:hover {
         color: #FFFFFF;
         font-size: 16px;
-        font-family:"proxima_novasemibold";
+        font-family:"proxima_novasemibold" !important;
         background-color: #AB2656;
         border: none;
   }
