--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -50,7 +50,7 @@
    color: #ffffff;
    margin-left: 25px;
    line-height: 22px;
-   font-family:"proxima_novasemibold";
+   font-family:"proxima_novasemibold", sans-serif !important;
    font-style: normal;
 }
 .info-text3{
@@ -61,7 +61,7 @@
    margin-left: 15px;
    padding-left: 10px;
    padding-right: 20px;
-   font-family:"proxima_novaregular";
+   font-family:"proxima_novaregular", sans-serif !important;
 
 }
 .info-text2{
@@ -72,7 +72,7 @@
    margin-left: 15px;
    padding-left: 10px;
    padding-right: 20px;
-   font-family:"proxima_novaregular";
+   font-family:"proxima_novaregular", sans-serif !important;
 
 }
 .flex-goal{
@@ -104,11 +104,11 @@
    color: #AB2656;
    margin-left: 25px;
    line-height: 22px;
-   font-family:"proxima_novasemibold";
+   font-family:"proxima_novasemibold", sans-serif !important;
    font-style: normal;
 }
 .header-info{
-    font-family: "proxima_novasemibold";
+    font-family: "proxima_novasemibold", sans-serif !important;
     font-size: 18px;
     color: #444444;
     display: block;
@@ -118,7 +118,7 @@
 
 } 
 .label-text{
-   font-family: "proxima_novasemibold";
+   font-family: "proxima_novasemibold",sans-serif !important;
    font-size: 14px;
    line-height: 17px;
    color: #7C7C7C;
@@ -164,7 +164,7 @@
    font-weight: bold;
    margin-bottom: 0px;
    font-size: 16px;
-   font-family: "proxima_novasemibold";
+   font-family: "proxima_novasemibold", sans-serif !important;
    padding-bottom: 20px;
 
 }
@@ -173,7 +173,7 @@
    line-height: 17px;
    color: #4D4D4D;
    margin-bottom: 10px;
-   font-family:"proxima_novaregular";
+   font-family:"proxima_novaregular", sans-serif !important;
    padding-top: 20px;
 }
 .css-vj8t7z{
@@ -194,14 +194,14 @@
     font-size:14px;
     margin:auto;
     padding-top: 3px;
-    font-family:"proxima_novaregular";
+    font-family:"proxima_novaregular", sans-serif !important;
 }
   .successIcon{
       padding-top: 20px;
   }
   .btn-create-new-goal{
       color: #FFFFFF;
-      font-family:"proxima_novasemibold";
+      font-family:"proxima_novasemibold",sans-serif !important;
       font-size:18px;
   }
   .btn-position{
@@ -248,7 +248,7 @@
   .top-goal-Message{
       color: #9F083E;
       font-size: 14px;
-      font-family: "proxima_novasemibold" !important;
+      font-family: "proxima_novasemibold",sans-serif !important;
       line-height: 24px;
       width: 100%;
       text-align: center;
@@ -273,7 +273,7 @@
 .information{
     font-size: 14px;
     color:#4D4D4D;
-    font-family:"proxima_novaregular";
+    font-family:"proxima_novaregular", sans-serif !important;
     margin-top: 40px;
 
 
