--- a/src/assets/css/docupload/custom-upload.css
+++ b/src/assets/css/docupload/custom-upload.css
@@ -1,4 +1,4 @@
-.fileContainer{
+/* .fileContainer{
     background: #9B9B9B !important;
     padding: unset !important;
     max-height: 45px !important;
@@ -12,24 +12,24 @@
     flex-direction: column;
     margin: 0px;
     transition: all 0.3s ease-in;
-}
+} */
 
-.fileContainer >p {
+/* .fileContainer >p {
     display: none;
-} 
+}  */
 
-.fileContainer .errorsContainer {
+/* .fileContainer .errorsContainer {
     max-width: 300px;
     font-size: 12px;
     color: red;
     text-align: left;
 
-    /* added */
+    /* added 
     position: absolute;
     bottom: -18px;
-}
+} */
 
-.fileContainer .chooseFileButton {
+/* .fileContainer .chooseFileButton {
     background: none;
     display: block;
     width: 100%;
@@ -50,7 +50,7 @@
     cursor: pointer;
     outline: none;
     border: none !important;
-}
+} */
 
 input[type="file"] {
     display: none;
