--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,15 +1,30 @@
-
+/* 
 form {
-    background-color: white;
-}
+    
+} */
 
 .coverPropertiesofComponent {
     width: 100%;
 }
 
 .packageContent input {
-    width: 80%;
-    margin-left: 20%;
+    width: 84%;
+    font-family: "Proxima Novasemibold" sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    color: #666666;
+    font-weight: bold;
+}
+
+.packageContent label {
+    float: left;
+    width: 100%;
+    margin-left: 0% !important;
+    font-family: "Proxima Novasemibold" sans-serif;
+}
+
+.packageContent select {
+    width: 90%;
 }
 
 .packageContent label {
@@ -37,10 +52,11 @@ form {
 .packageContent .parentForm {
     padding-bottom: 50px;
     padding-top: 20px;
-    background: #FFFFFF;
     border: 1px solid #EDEDED;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
     border-radius: 6px;
+    background-color: white;
+    padding-left: 15%;
 }
 
 .parentForm .twoBut{
@@ -96,8 +112,8 @@ form {
     height: 45px;
     color: #AB2656;
     border: 1px solid #AB2656;
-    /* margin-left: 1%; */
-}
+    margin-left: 1%; 
+} 
 
 .parentForm .forTwoButtons {
     margin-left: 17%;
@@ -182,4 +198,4 @@ form {
   
   .img-style {
     margin-bottom: 4px;
-  }
+  } 
