--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -16,6 +16,21 @@ form {
     font-weight: bold;
 }
 
+.docUpLoadFormProfile label {
+   width: 80%;
+   border: 1px solid #AB2656;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   color: #AB2656;
+   text-align: center;
+}
+
+.docUpLoadFormProfile label:hover {
+    color: white;
+    background-color: #AB2656;
+    text-align: center;
+}
+
 .packageContent label {
     float: left;
     width: 100%;
@@ -214,3 +229,8 @@ form {
 .sameAddressAsAbove {
     display: none !important;
 }
+
+
+
+
+
