--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -168,3 +168,20 @@
     padding-left: 10%;
     padding-right: 10%;
   }
+  .pagination {
+    margin-top: 25px;
+}
+.pagination span {
+  cursor: pointer;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+}
+  .pagination span.active {
+    background-color: #0099FF;
+    color: white;
+    border: 1px solid #0099FF;
+  }
