--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -38,7 +38,7 @@
      color: #444444;
      font-size: 16px;
      font-family:"proxima_novasemibold";
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
 
   }
 
