--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -78,6 +78,8 @@
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
+    cursor: pointer;
+    border: none
 }
 
 .joinGroup h6 {
@@ -494,6 +496,7 @@ font-weight: bold;
 
 .bottomDiscriptionDashBoard .right {
     width: 30%;
+
 }
 
 .bottomDiscriptionDashBoard .left p {
@@ -755,16 +758,17 @@ font-weight: bold;
     font-family:"proxima_novasemibold",sans-serif !important;
     font-size: 16px;
     line-height: 19px;
-
     text-align: center;
-
     color: #FFFFFF;
     padding-top: 12px;
     padding-bottom: 12px;
+    cursor: pointer;
+    border: none
 }
 
 .navLeft, .navMiddle, .navRight {
     width: 33.3%;
+
 }
 
 .butNav {
@@ -773,17 +777,27 @@ font-weight: bold;
     font-size: 12px;
     color: #444444;
     font-family:"proxima_novasemibold",sans-serif !important;
+    margin-left: 0 !important;
+    margin-right:0 !important;
+    
 }
 
 .navRight p {
     text-align: right;
+    cursor: pointer;
+
 }
 
 .navMiddle p {
     text-align: center;
+    cursor: pointer;
+
 }
 
 .moreDetails {
+    margin-left: 0 !important;
+    margin-right:0 !important
+    
 
 }
 
