--- a/src/components/insurance/insurance.scss
+++ b/src/components/insurance/insurance.scss
@@ -54,6 +54,65 @@
         color: #AB2656;
     }
 }
+.coverdetails-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    background: rgba(0,0,0,0.4);
+}
+.coverdetails-wrap {
+    width: 30%;
+    margin: 0 auto;
+    position: relative;
+    top: 90px;
+    h4.covertitle{
+        color: #AB2656;
+    }
+}
+.brand-title{
+    color: #AB2656;
+}
+.twosided-inputs {
+    display: flex;
+    &>div {
+        flex: 1 1 0;
+        &:nth-child(1){
+            padding-right:10px; 
+        }
+        &:nth-child(2){
+            padding-left:10px; 
+        }
+    }
+}
+.collapse-details{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.policyinfo-wrap{
+    h4{
+        margin: 15px 25px;
+        font-size: 16px;
+    }
+}
+.policy-benefit {
+    margin-bottom: 6px;
+    span{
+        font-weight: 600;
+        font-size: 13px;
+        margin-left: 10px;
+    }
+}
+.allcovers-list {
+    padding: 10px 25px 25px;
+    max-height: 400px;
+    overflow: auto;
+}
 .policyinfo-wrap{
     padding: 5px 20px;
     .product-name{
