--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -18,7 +18,7 @@ form {
 
 .docUpLoadFormProfile label {
    width: 80%;
-   border: 1px solid #AB2656;
+   border: 1px solid rgb(179, 151, 161);
    padding-top: 10px;
    padding-bottom: 10px;
    color: #AB2656;
@@ -32,6 +32,9 @@ form {
     color: black !important;
     text-align: left !important;
     padding-top: 3px !important;
+    font-size: 14px !important;
+    line-height: 17px !important;
+    color: #7C7C7C !important;
 }
 
 .profileOtherLabel:hover {
@@ -246,7 +249,72 @@ form {
 .notSameAddressAsAbove {
     display: block !important;
 }
-   
+
+.signatureUploadTemp {
+    padding-top: 70px;
+    padding-bottom: 50px !important;
+    height: 180px;
+    background-color: #F5F5F5;
+    padding-left: 30% !important;
+}
+
+.resizeLabel {
+    width: 150px !important;
+    /* border-radius: 25%; */
+    border: 1px solid #DADADA !important;
+    height: 40px;
+    color:  #7C7C7C !important;
+    /* margin-left: 40% !important; */
+}
+
+.upLoadDiscription {
+    text-align: center;
+    color: #787878;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.resizeLabel:hover {
+    color: white !important;
+}
+
+#dateOfIssuance {
+    color: black;
+}
+
+.inlineCardsProfile {
+    padding-top: 70px;
+    padding-bottom: 50px !important;
+    height: 180px;
+    background-color: #F5F5F5;
+    padding-left: 20% !important;
+    padding-right: 20% !important;
+}
+
+
+.forIdentityCards {
+    margin-left: 0px;
+    /* width: 150px !important; */
+    /* border-radius: 25%; */
+    border: 1px solid #DADADA !important;
+    height: 40px;
+    color:  #7C7C7C !important;
+}
+
+.forIdentityCards:hover {
+    color: white !important;
+}
+
+.hdStyle {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    font-family: Proxima Nova;
+    font-size: 14px;
+    line-height: 17px;  
+    color: #7C7C7C;
+}
+
+
 
 
 
