--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -179,7 +179,7 @@ form {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
     border-radius: 6px;
     background-color: white;
-    padding-left: 11%;
+    /* padding-left: 11%; */
 }
 
 .parentForm .twoBut{
