--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -16,7 +16,7 @@ form {
 }
 
 .packageContent input {
-    width: 86.5%;
+    /* width: 86.5%; */
     font-family: sans-serif;
     font-size: 14px;
     line-height: 17px;
@@ -63,7 +63,11 @@ form {
 }
 
 .packageContent select {
-    width: 90%;
+    /* width: 90%; */
+}
+
+.center-alignment {
+    margin-left: 12px;
 }
 
 .packageContent label {
@@ -78,58 +82,26 @@ form {
     padding-top: 100px !important;
 }
 
-.date-picker-size {
-    width: 89% !important
+.float-right {
+    float: right
 }
+
 .no-border {
     border: none !important
 }
 
-.state-origin {
-    width: 90% !important
-}
-
-.birth-place {
-    width: 90.5% !important
-}
-
-.select-married {
-    width: 89.5% !important;
-}
-
 .align-button {
     text-align: center;
-    margin-right: 9%
+    /* margin-right: 9% */
 }
 
 .align-buttons {
     text-align: center;
-    margin-right: 13%
-}
-
-.enter-city {
-    width: 90% !important;
-}
-
-.dob {
-    width: 89% !important;
-}
-
-.select-lga {
-    width: 87% !important;
+    /* margin-right: 13% */
 }
 
 .select-identity {
-    width: 95% !important;
     height: 43px !important;
-}
-
-.upload-identity {
-    margin-left: 10px !important
-}
-
-.state-mailing {
-    width: 95% !important;
 }
 
 .select-gender {
@@ -142,15 +114,15 @@ form {
 }
 
 .enter-national {
-    width: 90% !important;
+    /* width: 90% !important; */
 }
 
 .enter-bvn {
-    width: 90% !important;
+    /* width: 90% !important; */
 }
 
 .select-sector-occupation {
-    width: 86.5% !important;
+    /* width: 86.5% !important; */
 }
 
 .tickItems {
@@ -251,10 +223,19 @@ form {
 
 .parentForm .formHeading{
     padding: 10px;
-    padding-left: 35%;
+    /* padding-left: 35%; */
+    text-align: center;
     font-weight: bold;
     border-bottom: 1px solid #eeeeee;
     color: #AB2656;
+}
+
+.button-alignment {
+    text-align: center
+}
+
+.button-size {
+    width: 173px !important
 }
 
 .person-card {
@@ -429,13 +410,13 @@ form {
 
 
 .imgShape {
-    margin-left: 30%;
+    /* margin-left: 30%; */
     margin-top: 30px;
     margin-bottom: 50px;
 }
 
 .sucMssgOfProfile {
-    padding-left: 20%;
+    /* padding-left: 20%; */
     font-family: sans-serif;
     font-size: 18px;
     line-height: 21px;
@@ -447,14 +428,7 @@ form {
     /* position: absolute; */
 }
 
-.parentForm .sucMsg {
+.parentForm.sucMsg {
    padding-left: 0px !important;
+   text-align: center !important;
 }
-
-
-
-
-
-
-
-
