--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,11 +1,3 @@
-/* 
-form {
-    
-} */
-
-* {
-    font-family: sans-serif;
-}
 
 .profileWrapper {
     padding-top: 50px !important;
@@ -76,10 +68,6 @@ form {
 
 .select-size {
     height: 38px
-}
-
-.dashboard-wrapper {
-    padding-top: 100px !important;
 }
 
 .float-right {
@@ -431,4 +419,9 @@ form {
 .parentForm.sucMsg {
    padding-left: 0px !important;
    text-align: center !important;
+}
+
+.loading-info {
+    text-align: center;
+    margin-top: 20px
 }
