Added design for forgot password

--- a/src/components/onboarding/onboarding.scss
+++ b/src/components/onboarding/onboarding.scss
@@ -20,7 +20,12 @@
   color: #9c9c9c;
   cursor: not-allowed;
 }
-
+.forgotpw-link{
+  &:hover{
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
 
 .btn-alat.disabled-btn, button:disabled { 
   // background: #DADADA;
