--- a/ALATv2HTML/css/dashboard.css
+++ b/ALATv2HTML/css/dashboard.css
@@ -2435,3 +2435,12 @@ ul.menu-side {
     text-align: right;
     width: 30%;
     font-size: 0.85714em; } }
+
+
+  .talk-to-us-image{
+    margin:'5px';
+    margin-top:'5px'
+    
+    
+  }
+    
