--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -63,6 +63,14 @@ a:hover {
   display: block;
   cursor: pointer;
   height: 55px;
-  border-radius: 3px; }
+  border-radius: 3px; 
+}
+/* .talk-to-us-image{
+  margin:'5px';
+  margin-top:'5px'
+
+
+} */
+
 
 /*# sourceMappingURL=style.css.map */
