fixed reload on Group Savings

--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -8,6 +8,10 @@
     padding-right: 6%;
 }
 
+.editRotHeading {
+    color: #AB2656 !important;
+}
+
 .accountSelection p {
     margin-bottom: 0px;
     padding-bottom: 0px;
