Added card control integration for multiple cards holder, resolved issues with request card integrations

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -16,7 +16,10 @@
     justify-content: space-between;
     align-items: center;
     img{
-        width: 40px;
+        width: 35px;
+        &.larger{
+            width:25px;
+        }
     }
 }
 .cardtype{
@@ -26,6 +29,10 @@
     font-size: 14px;
     font-weight: normal;
     letter-spacing: 1.3px;
+    &.nonalat-card{
+        bottom: 24px;
+        left: 30px;
+    }
 }
 .amountsummary-text {
     margin: 20px 0;
@@ -35,11 +42,36 @@
         margin-right: 14px;
     }
 }
+span.close-btn {
+    font-weight: 800;
+    font-size: 19px;
+    color: #85929E;
+    float: right;
+    &:hover{
+        cursor: pointer;
+    }
+}
+.design-options-wrap{
+    .slider a.previousButton:not(.disabled):hover, .slider a.nextButton:not(.disabled):hover{
+        transform: translateY(-50%);
+    }
+}
+.transfer-ctn.no-padding-t{
+    padding-top: 0;
+}
+
 .design-options-wrap{
     width: 80%;
     margin: 0 auto;
     &.width-unset{
         width: 100%;
+        .slider{
+            width: 70%;
+            height: 200px;
+        }
+        .slider a.previousButton, .slider a.nextButton{
+            transform: translateY(-50%);
+        }
     }
     .slider{
         height: 240px;
@@ -274,6 +306,12 @@
     &.slide.current{
         left: 30px;
     }
+    &.atmdesign{
+        width: 86%;
+        height: 200px;
+        border-radius: 9px;
+        // left: unset;
+    }
 }
 .helptext{
     display: block;
@@ -364,7 +402,7 @@ input{
     font-size: 17px;
 }
 .cardnum-digits {
-    font-size: 23px;
+    font-size: 20px;
     font-weight: 600;
     margin-top: 18px;
     letter-spacing: 1.5px;
