--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1049,6 +1049,13 @@ a:hover {
     border: 1px solid #9B9B9B !important;
   }
 
+  .btn-disabled{
+    background: #DADADA !important;
+      color: #9c9c9c !important;
+      border: 1px solid #9D0F3E !important;
+      cursor: not-allowed;
+  }
+
 .btn-alat {
   background: #AB2656;
   color: #FFFFFF;
